fixed broken css reference

--- a/tapjoyads/public/stylesheets/sass/marketplace/theme/tjm/style.scss
+++ b/tapjoyads/public/stylesheets/sass/marketplace/theme/tjm/style.scss
@@ -369,6 +369,7 @@ li {
 /**
  * icon classes
  */
+ 
 .score {
   background: url(#{$image_path}/thumbs_up.png) no-repeat 0 0;
 }
@@ -393,9 +394,8 @@ li {
 .social-med {
   background: url('/images/games/social-med.png') no-repeat 0 0;
 }
-.score {
-  background: url('/images/games/thumbs-up.png') no-repeat 0 0;
-}
+
+
 .thumbs-up {
   @extend .score;
 }
